--- a/LaTeX/sample.bib
+++ b/LaTeX/sample.bib
@@ -283,3 +283,22 @@
   howpublished = {\url{https://www.thalmic.com/en/myo/}},
   urlcolor = black,
 }
+
+@article{CC01a,
+ author = {Chang, Chih-Chung and Lin, Chih-Jen},
+ title = {{LIBSVM}: A library for support vector machines},
+ journal = {ACM Transactions on Intelligent Systems and Technology},
+ volume = {2},
+ issue = {3},
+ year = {2011},
+ pages = {27:1--27:27},
+ note =	 {Software available at \url{http://www.csie.ntu.edu.tw/~cjlin/libsvm}}
+}
+
+@Misc{How_Many_People_Use_ASL,
+  author =       {Mitchell, Ross E. and Young, Travas A. and Bachleda, Bellamie and Karchmer, Michael A.},
+  title =        {How Many People Use ASL in the United States? Why Estimates Need Updating.},
+  school =       {Gallaudet Research Institute},
+  year =         {2006},
+%   address =      {Cambridge, MA},
+}
