--- a/LaTeX/sample.bib
+++ b/LaTeX/sample.bib
@@ -282,6 +282,7 @@
   title = {{Thalmic Labs. Myo.}},
   howpublished = {\url{https://www.thalmic.com/en/myo/}},
   urlcolor = black,
+  year = {2015}
 }
 
 @article{CC01a,
