--- a/LaTeX/proceedings.tex
+++ b/LaTeX/proceedings.tex
@@ -76,34 +76,40 @@
 
 \title{\getTitleName\ : Sensing Hand Gestures via the Back of the Hand}
 
-\numberofauthors{3}
-\author{%
-  \alignauthor{1st Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{City, Country}\\
-    \email{e-mail address}}\\
-  \alignauthor{2nd Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{City, Country}\\
-    \email{e-mail address}}\\
-  \alignauthor{3rd Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{City, Country}\\
-    \email{e-mail address}}\\
-}
+% \numberofauthors{3}
+% \author{%
+%   \alignauthor{1st Author Name\\
+%     \affaddr{Affiliation}\\
+%     \affaddr{City, Country}\\
+%     \email{e-mail address}}\\
+%   \alignauthor{2nd Author Name\\
+%     \affaddr{Affiliation}\\
+%     \affaddr{City, Country}\\
+%     \email{e-mail address}}\\
+%   \alignauthor{3rd Author Name\\
+%     \affaddr{Affiliation}\\
+%     \affaddr{City, Country}\\
+%     \email{e-mail address}}\\
+% }
 
 \maketitle
 
 \begin{abstract}
-In this paper we present HandTie, a body-worn gestural interface. 
-Using an array of strain gauge (SG) attach on back of the hand, 
-the interface can distinguish subtle and robust gestures with high accuracy and speed. 
+% In this paper we present HandTie, a body-worn gestural interface. 
+% Using an array of strain gauge (SG) attach on back of the hand, 
+% the interface can distinguish subtle and robust gestures with high accuracy and speed. 
 
-The system is trained to classify gestures from subtle tendon movements on back of hand. 
-We demonstrate that HandTie is a complete system that works wirelessly in real-time. 
-The system is simple and light-weight in terms of power consumption and computational overhead. 
-We perform user studies to explore the influence of various gesture on the back of the hand and evaluate the accuracy, speed, and repeatability. 
+% The system is trained to classify gestures from subtle tendon movements on back of hand. 
+% We demonstrate that HandTie is a complete system that works wirelessly in real-time. 
+% The system is simple and light-weight in terms of power consumption and computational overhead. 
+% We perform user studies to explore the influence of various gesture on the back of the hand and evaluate the accuracy, speed, and repeatability. 
+% We conclude by showing example applications.
+
+In this paper we present HandTie, an exploration on a potential input signal source for gestural interface.
+We developed a prototype using an array of strain gauge (SG) sensors attached to the back of hand to demonstrate one of the sensing techniques to extract signals from such body part.
+The signals extracted from the back of hand are training data and test data for gestural classification. Based on the results of the average accuracy rate of 10-fold cross validations of all 10 participants, we are able to determine the optimal sensing location on the back of hand and the feasibility of utilizing such signal source.
 We conclude by showing example applications.
+
 \end{abstract}
 
 \keywords{Gesture recognition; wearable interface; strain gauge; machine learning; gestural interaction }
@@ -229,7 +235,8 @@ Contributions of this paper are the followings:
 \begin{itemize}
 \item We explored a new signal source, the back of hand, for gestural input.
 \item We proposed a prototype utilizing physical changes on the back of the hand to detect subtle hand gestures. 
-\item We performed user study to address optimal strain sensor placement on the back of hand.
+% \item We performed user study to address optimal strain sensor placement on the back of hand.
+\item We performed user study to seek the optimal sensing location on the back of hand.
 % \item We ... associated hardware and software design spaces.
 \item We implemented a set of applications and broader interactions with the different usage scenarios that are enabled by \getTitleName.
 \end{itemize}
@@ -283,7 +290,7 @@ Strain gauge sensors are sensitive devices used to measure very small strain and
 
 
 % 需要解釋為什麼要19個應變規
-In our prototype, the sensing stage of our prototype consists of a reusable artificial skin and an array of 19 120-ohm 2-mm strain gauge sensors. The artificial skin is attached to the back of hand and acts as a sensor carrier. The sensors are evenly distributed into 2 rows for greater resolution in data acquisition shown in figure X. The following explains for such sensor layout. An average of human hand width is approximately 81 mm \cite{Kulaksiz2002257}, and the base length of a 2-mm strain gauge is 6.3 mm. In order to avoid physical contact between any two neighboring sensors in a row causing strain interference, a spaced interval of 1.5 mm separates them, resulting in 10 strain gauges in a row across the hand width. Without the loss of strain measurement between the two neighboring sensors, a second row with 9 sensors, each of which is vertically aligned with each center of the spaced intervals on the first row, is placed closely to the first row. The sensor array measures the deformations of multiple individual spots of the artificial skin caused by physical changes on the back of hand. Thus, our prototype is made possible to become a gestural interface for general users.
+In our prototype, the sensing stage of our prototype consists of a reusable artificial skin and an array of 19 120-ohm 2-mm strain gauge sensors. The artificial skin is attached to the back of hand and acts as a sensor carrier. The sensors are evenly distributed into 2 rows for greater resolution in data acquisition shown in figure X. The following sentences explain for such sensor layout. An average of human hand width is approximately 81 mm \cite{Kulaksiz2002257}, and the base length of a 2-mm strain gauge is 6.3 mm. In order to avoid physical contact between any two neighboring sensors in a row causing strain interference, a spaced interval of 1.5 mm separates them, resulting in 10 strain gauges in a row across the hand width. Without the loss of strain measurement between the two neighboring sensors, a second row with 9 sensors, each of which is vertically aligned with each center of the spaced intervals on the first row, is placed closely to the first row. The sensor array measures the deformations of multiple individual spots of the artificial skin caused by physical changes on the back of hand. Thus, our prototype is made possible to become a gestural interface for general users.
 
 Next, the signal conditioning stage includes a Wheatstone bridge, 3 8-to-1 analog switches (MAX4617, Maxim Integrated), a dual digital potentiometer (MCP4251, Microchip), and an instrumental amplifier (AD623, Analog Devices). Finally, the processing stage includes an Arduino Nano used to sample the sensors and control chips in the signal conditioning stage. The complete circuit diagram is shown in \autoref{fig:completeCircuitDiagram}.
 
@@ -302,7 +309,7 @@ Next, the signal conditioning stage includes a Wheatstone bridge, 3 8-to-1 analo
   \end{center}
 \end{figure}
 
-The 19 sensors are read sequentially through the analog switches, so each sensor is electrically connected at a time. Once a sensor is active, the sensor became one of the 4 resistors on the Wheatstone bridge. The equivalent electric circuit is shown in \autoref{fig:equivalentCircuitDiagram}. Since the resistance of each sensor varies under no applied external force, a digital potentiometer in series with the connected sensor for calibration is also a resistor on the Wheatstone bridge. Another digital potentiometer serves the purpose of amplifier gain adjustment. In our prototype, the instrumental amplifier gain is set to be approximately 800 to 1000. Due to the dynamic response time of the amplifier, a 100-microsecond delay is added between each reading leading to a sampling rate of 526 Hz for our prototype.
+The 19 sensors are read sequentially through the analog switches, so each sensor is electrically connected at a time. Once a sensor is active, the sensor became one of the 4 resistors on the Wheatstone bridge. The equivalent electric circuit is shown in \autoref{fig:equivalentCircuitDiagram}. Since the resistance of each sensor varies under no applied external force, a digital potentiometer in series with the connected sensor is used for calibration. Another digital potentiometer serves the purpose of amplifier gain adjustment. In our prototype, the instrumental amplifier gain is set to be approximately 800 to 1000. Due to the dynamic response time of the amplifier, a 100-microsecond delay is added between each reading leading to a sampling rate of 526 Hz for our prototype.
 
 \begin{figure}
   \begin{center}
@@ -328,43 +335,78 @@ We recruited 10 participants (4 females, 9 right-handed) aged between 20 and 32 
 
 \begin{figure}
   \begin{center}
-  \includegraphics[width=1\columnwidth]{figures/gestureSet_16_v2.pdf}
-  \caption{
-    16 Gestures
-  }\label{fig:gestureSet16}
+  \includegraphics[width=1\columnwidth]{figures/gestureSet_16_v3.pdf}
+  \caption{16 gestures are chosen from American Sign Language. The parentheses explain its additional cultural meaning.}
+  \label{fig:gestureSet16}
   \end{center}
 \end{figure}
 
-We mainly picked this gesture set from American Sign Language (ASL), which is used as a primary means of communication for over one half million people in the United States \cite{How_Many_People_Use_ASL}. 
-In principle, there are 37 classes in the dataset. However, without considering the hand direction and movement, there are gestures that are notoriously difficult to classify between letters and digits due to their similarities.
-For example, taking no account of rotation invariant method, ``Z'' ``1'' are too similar. 
-Other examples are ``2'' against ``V'' and ``K'', ``H'' against ``U'', ``I'' against ``J'' etc.
-We properly excluded letters in ASL because the primary purpose of this study is to explore the influence of finger movements on back of the hand with various gesture.
-Eventually, we choose digits from 0 to 10 in ASL and add other five daily life gestures (e.g. fist, call, rock etc) and one was hand in a relaxed position.
+\subsubsection{Gesture Set}
 
+We mainly picked this gesture set from American Sign Language (ASL), which is used as a primary means of communication for over one half million people in the United States \cite{How_Many_People_Use_ASL}. 
+In principle, there are 37 classes in the dataset including 11 digits (e.g. 0-10) and 26 alphabet letters. However, without considering the hand orientation and movement, there are gestures that are notoriously difficult to classify between the set of letters and digits due to their similarities.
+For example, taking no account of rotation invariant method, ``Z'' and ``1'' are too similar.
+Other examples are ``2'' against ``V'' and ``K'', ``H'' against ``U'', ``I'' against ``J'' etc.
+% We properly excluded most letters in ASL because the primary purpose of this study is to explore the influence of finger movements on back of the hand with orientation independent gestures.
+We properly excluded most letters in ASL because the primary purpose of this study is to simply extract physical changes on the back of hand caused by hand gestures regardless of orientation.
+
+Eventually, we choose digits from 0 to 10, ``L'', ``S'', ``Y'', and ``ILY'' (a combination of ``I'', ``L'', and ``Y'' meaning ``I love you'') from ASL and a relaxed gesture. In addition to the standard meanings from ASL, the gestures chosen above also possess a variety of cultural meanings. For instance, the ``Y'' handshape also represents making a phone call. Other chosen handshapes can be interpreted in different ways.
+
+\subsubsection{Procedure}
+%see figure
 Figure X shows the study setup. The participants rested their right arm and wrist on the tilt platform and were seated on a chair whose height they could adjust to perform the tasks with ease. The monitor in front of the participants displayed instructions during the study.
 
-\subsection{Procedure}
-Initially, 8 rows (16 positions) across participants’ back of the hands were uniformly sampled and marked. The sampling scope ranged from the position of metacarpophalangeal joints (MCP, the knuckle between the hand and the finger) to the head of ulna (at the wrist).%see figure
-The markers served as affixing targets for artificial skin composed of arrays of 19 strain gauges. 
-Figure X illustrates the process using 19 strain gauges (2 rows each time) to gather information of hand movements.
+%need to explain why 8 rows!!
+Initially, 8 rows (16 positions) across participants’ back of the hand were uniformly sampled and marked. The sampling scope ranged from the position of metacarpophalangeal joints (MCP, the knuckle between the hand and the finger) to the head of ulna (at the wrist).%see figure 
+ The markers served as affixing targets for artificial skin composed of arrays of 19 strain gauges. 
+Figure X illustrates the process using 19 strain gauges (2 rows each time) to gather information of finger movements.
 
 We then affixed the artificial skin composed of arrays of strain gauges to these 8-row markers on the right hand for 4 rounds (2 rows each time). 
-At each round, each participant performed each of 16 gestures randomly from on-screen instructions. Each gesture was trained 3 times; Each of them was sampled at 10 Hz in a duration of 2 seconds.
-
-For the evaluation, each participant then performed the similar task as training sessions. Each gesture was done 7 times. The order of the gestures was randomly selected. The instructions for each specific gesture were displayed but without showing what the gesture was classified. 
+At each round, each participant performed each of 16 gestures from on-screen instructions. Each gesture was collected 10 times. Each of them was sampled at 10 Hz in a duration of 2 seconds.
+The order of the gestures was randomly selected. 
 Overall, the study took approximately 80 minutes per participants.
+% For the evaluation, each participant then performed the similar task as training sessions. Each gesture was done 7 times.The instructions for each specific gesture were displayed but without showing what the gesture was classified. 
 
 \subsection{Results}
-To delve into the optimal sensor placement, we tested all the combinations of the 8 rows obtained from each participant, generating 15 possible subsets (including 8 single rows (from 0 to 7) and 7 double rows (e.g., 01, 12, 23, 34, 45, 56, 67).
-Each generated subset was evaluated based on a 10-fold cross-validation and external 7 times testing dataset.
-The best results were obtained with a selection of highest mean accuracy rate across all participants.
-In 10-fold cross validation, the mean accuracy of the best result from the generating 15 possible subsets across all participants was 99.96\% (SD: ±2.7\%).
-It represents the upper bound of accuracy.
-On the other hand, we computed accuracy using the external 7 times testing dataset, which reflects the real-time performance of the system.
-In this case, the accuracy was 91.17\% (SD: ±3.88\%).
 
-The results show that (1) the row23 had the highest accuracy rate, indicating the optimal sensor placement is not located closest to the finger joints but second to it. (2) The , indicating that.
+\begin{figure*}
+ \begin{center}
+  \includegraphics[width=2\columnwidth]{figures/user16GesturesSV.pdf}
+  \caption{ 16 heat maps display all 16 gestures performed by a user. Each entry is an average heat map of 10 trials of a gesture.
+  }
+  \label{fig:user16GesturesSV}
+  \end{center}
+\end{figure*}
+
+\begin{figure*}
+ \begin{center}
+  \includegraphics[width=2\columnwidth]{figures/SVisual_v2.pdf}
+  \caption{
+    (A) A gesture of ``8'' from ASL is performed.
+    (B) A heat map is illustrated to show the sensor values of each strain gauge resulting from the gesture of ``8'' performed by a user. 
+    (C) Each entry is an average heat map of 10 trials of gesture ``8'' performed by a single user. The color distributions of each heat map differ quite much from person to person.
+    (D) 10 heat maps display all 10 trials of gesture ``8'' carried out by a participant. The color distributions remain fairly consistent throughout the entire user study.
+  }
+  \label{fig:SVisual}
+  \end{center}
+\end{figure*}
+
+% To delve into the optimal sensor placement, we tested all the combinations of the 8 rows obtained from each participant, generating 15 possible subsets including 8 1-row combinations (from 0 to 7) and 7 2-row combinations (e.g., row-01, 12, 23, 34, 45, 56, 67).
+%It represents the upper bound of accuracy.On the other hand, we computed accuracy using the external 7 times testing dataset, which reflects the real-time performance of the system. In this case, the accuracy was 91.17\% (SD: ±3.88\%).
+Our results consist mainly two parts. The first part is a scientific visualization of physical changes on the back of hand. The second part is the determination of optimal sensor placement through machine learning.
+
+%Each color in a block of a heat map represents a strain gauge sensor value. The heat map color spectrum ranges from red to blue standing for the two extreme states of tension and compression.
+The scientific visualization is shown in heat maps which displays a block with highest tension sensor value as red and highest compression value as blue. The color green represents the neutral state (without tension and compression) of a strain gauge. Other blocks with colors in-between the extremes of red and blue on the color spectrum feature sensor values between the highest tension value and highest compression value. \autoref{fig:user16GesturesSV}\ showing all 16 gestures performed by a participant implies that every pattern of the back of the hand has a gesture model inside it. \autoref{fig:SVisual}\ indicates heat maps of a gesture of ``8'' performed by 10 participants. 
+
+% every pattern of the back of the hand has a gesture model inside it and it is the task of the evaluation to discover it.
+
+To delve into the optimal sensor placement, we tested all 15 possible subsets for determining minimum strain sensor coverage area on the back of hand including 8 single-row combinations (from row-0 to row-7) and all 7 two-adjacent row combinations (e.g., row-01, row-12, row-23, row-34, row-45, row-56, row-67) from each participant.
+Each generated subset was evaluated based on a 10-fold cross validation.
+The best results were obtained with a selection of highest mean accuracy rate across all participants.
+In 10-fold cross validation, the mean accuracy of the best result from the 15 subsets across all participants was 99.96\% (SD: ±2.7\%).
+The results show that
+(1) the row-12 had the highest accuracy rate, indicating the optimal sensor placement is not located closest to the finger joints but second to it.
+(2) The accuracy rates of single-row combinations indicating that.
 
 \begin{figure*}
  \begin{center}
@@ -375,12 +417,16 @@ The results show that (1) the row23 had the highest accuracy rate, indicating th
   \end{center}
 \end{figure*}
 
+\section{DISCUSSION}
 
 \section{EXAMPLE APPLICATIONS}
 
-
-\section{DISCUSSION}
-
+\subsection{Smartwatch Control:Thumb \& index finger interaction}
+    
+\subsection{Musical Performance:Thumb \& four fingers}
+    
+\subsection{Baseball Pitching Grips: some specific set of gestures \& force detection}
+    
 % Use a numbered list of references at the end of the article, ordered
 % alphabetically by first author, and referenced by numbers in
 % brackets~\cite{ethics, Klemmer:2002:WSC:503376.503378,
